--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
 
     <!-- Styles -->
 
-    <link
-            rel="stylesheet"
-            href="../../../cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
-    />
+    <link rel="stylesheet" href="../../../cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
 
     <link rel="stylesheet" href="app/dist/aos.css">
     <link rel="stylesheet" href="app/dist/animate.css">
