--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cyfonii - NFT Portfolio and Landing Page HTML Template</title>
+    <title>Rave Tech</title>
 
     <!-- Styles -->
 
@@ -770,7 +770,7 @@
                                         <path d="M10 7C10 7.53043 9.78929 8.03914 9.41421 8.41421C9.03914 8.78929 8.53043 9 8 9C7.46957 9 6.96086 8.78929 6.58579 8.41421C6.21071 8.03914 6 7.53043 6 7C6 6.46957 6.21071 5.96086 6.58579 5.58579C6.96086 5.21071 7.46957 5 8 5C8.53043 5 9.03914 5.21071 9.41421 5.58579C9.78929 5.96086 10 6.46957 10 7V7Z" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                                         <path d="M13 7C13 11.7613 8 14.5 8 14.5C8 14.5 3 11.7613 3 7C3 5.67392 3.52678 4.40215 4.46447 3.46447C5.40215 2.52678 6.67392 2 8 2C9.32608 2 10.5979 2.52678 11.5355 3.46447C12.4732 4.40215 13 5.67392 13 7V7Z" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                                     </svg>
-                                    <p>20, Backway Road, New York, US AB42</p>
+                                    <p>Location</p>
                                 </li>
                                 <li>
                                     <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -862,7 +862,7 @@
                                 <li><a href="#">Team</a></li>
                                 <li><a href="#">Contact</a></li>
                             </ul>
-                            <p>Copyright © 2022, Cyfonii. Designed by Themesflat</p>
+                            <p>Copyright © 2023, <span style="color: #01fe4b"> Rave Tech </span></p>
                         </div>
                         <ul class="list-social">
                             <li><a href="#">
