--- a/index.html
+++ b/index.html
@@ -791,7 +791,11 @@
                             </div>
                         </div>
 
-                        <form action="#" class="form-box">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d236161.13768963434!2d113.97459098317884!3d22.35295762993675!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3403e2eda332980f%3A0xf08ab3badbeac97c!2sHong%20Kong!5e0!3m2!1sen!2sbd!4v1688550145148!5m2!1sen!2sbd" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+
+
+                        <!--<form action="#" class="form-box">
                             <div class="row">
                                 <div class="col">
                                     <label >Your name</label>
@@ -828,7 +832,7 @@
                                     <button class="action-btn"><span>Send Now</span></button>
                                 </div>
                             </div>
-                        </form>
+                        </form>-->
                     </div>
                 </div>
             </div>
