--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fade Bill</title>
+    <title>Rave Tech</title>
 
     <!-- Styles -->
 
@@ -858,7 +858,7 @@
                                 <li><a href="#">FAQ</a></li>
                                 <li><a href="#">Contact</a></li>
                             </ul>
-                            <p>Copyright © 2023, <span style="color: #01fe4b"> Rave Tech </span></p>
+                            <p>Copyright © 2023, <span style="color: #53e290"> Rave Tech </span></p>
                         </div>
                         <ul class="list-social">
                             <li><a href="#">
