--- a/index.html
+++ b/index.html
@@ -167,25 +167,10 @@
                     <div class="block-text">
                         <h6 class="sub-heading"><span>About us</span></h6>
                         <h3 class="heading wow" data-splitting>Rave Tech Limited</h3>
-                        <p class="mb-17">At our company, we believe that sustainable living is more than just a trend -
-                            it's a way of life. That's why we're proud to offer our digital receipts system - FadeBill
-                            that not only makes your life easier but also helps the environment. Join us on our journey
-                            towards a brighter, cleaner, and more sustainable future.</p>
-                        <p class="mb-26">FadeBill is designed to eliminate the hassle of paper receipts while also
-                            providing a well-organized and easy-to-use solution for safeguarding e-receipts. We
-                            understand that paper receipts are a major contributor to environmental waste, and we're
-                            committed to providing a digital alternative that is both convenient and sustainable.</p>
-                        <p class="mb-26">The FadeBill system includes a mobile app, merchant dashboard, software, and
-                            database, all of which are designed to simplify the after-sales experience for both
-                            consumers and retailers. By incorporating NFC technology, we've made it easy for customers
-                            to access their digital receipts, while also providing a straightforward way for retailers
-                            to monitor their business operations and gain valuable insights.</p>
-                        <p class="mb-26">We've also designed FadeBill with the next generation in mind, with games-like
-                            features in our mobile app that appeal to younger users and encourage them to embrace a
-                            sustainable lifestyle. And to incentivize the shift to digital receipts, we offer exclusive
-                            rewards and discounts to end-users who opt for our system.</p>
-                        <p class="mb-26">Join the sustainable living movement today and start making a difference with
-                            our digital receipts system.</p>
+                        <p class="mb-17">We believe that sustainable living is more than just a trend - it's a way of life. That's why we're proud to offer our digital receipts system - FadeBill that not only makes your life easier but also helps the environment. Join us on our journey towards a brighter, cleaner, and more sustainable future.</p>
+                        <p class="mb-26">FadeBill is designed to eliminate the hassle of paper receipts while also providing a well-organized and easy-to-use solution for safeguarding e-receipts. Paper receipts are a major contributor to environmental waste, and we're committed to providing a digital alternative that is both convenient and sustainable.</p>
+                        <p class="mb-26">The FadeBill system includes a mobile app, merchant dashboard, software, and database, all of which are designed to simplify the after-sales experience for both consumers and retailers. By incorporating NFC technology, we've made it easy for customers to access their digital receipts, while also providing a straightforward way for retailers to monitor their business operations and gain valuable insights.</p>
+                        <p class="mb-26">We've also designed FadeBill with the next generation in mind, with games-like features in our mobile app that appeal to younger users and encourage them to embrace a sustainable lifestyle. And to incentivize the shift to digital receipts, we offer exclusive rewards and discounts to end-users who opt for our system.</p>
                     </div>
                 </div>
             </div>
@@ -258,13 +243,13 @@
                                             <div class="row">
                                                 <div class="col-lg-6 col-md-6">
                                                     <div class="content">
-                                                        <h4 class="heading">Create your NFT portfolio</h4>
-                                                        <p>Get udpated with news, tips & tricks</p>
+                                                        <img src="assets/images/layouts/Picture1%20(1).png" alt="">
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-6 col-md-6">
                                                     <div class="content">
-                                                        <img src="assets/images/layouts/Picture1%20(1).png" alt="">
+                                                        <h4 class="heading">Create your NFT portfolio</h4>
+                                                        <p>Get udpated with news, tips & tricks</p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -322,13 +307,13 @@
                                             <div class="row">
                                                 <div class="col-lg-6 col-md-6">
                                                     <div class="content">
-                                                        <h4 class="heading">Create your NFT portfolio</h4>
-                                                        <p>Get udpated with news, tips & tricks</p>
+                                                        <img src="assets/images/layouts/Picture3%20(1).png" alt="">
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-6 col-md-6">
                                                     <div class="content">
-                                                        <img src="assets/images/layouts/Picture3%20(1).png" alt="">
+                                                        <h4 class="heading">Create your NFT portfolio</h4>
+                                                        <p>Get udpated with news, tips & tricks</p>
                                                     </div>
                                                 </div>
                                             </div>
