--- a/index.html
+++ b/index.html
@@ -248,8 +248,7 @@
                                                 </div>
                                                 <div class="col-lg-6 col-md-6">
                                                     <div class="content">
-                                                        <h4 class="heading">Create your NFT portfolio</h4>
-                                                        <p>Get udpated with news, tips & tricks</p>
+                                                        <h5 class="heading">Install the FadeBill Software on your shops’ POS systems.</h5>
                                                     </div>
                                                 </div>
                                             </div>
@@ -275,8 +274,7 @@
                                             <div class="row">
                                                 <div class="col-lg-6 col-md-6">
                                                     <div class="content">
-                                                        <h4 class="heading">Create your NFT portfolio</h4>
-                                                        <p>Get udpated with news, tips & tricks</p>
+                                                        <h5 class="heading">By connecting our specially-designed NFC device, your customers can get their digital receipts with just one tap.</h5>
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-6 col-md-6">
@@ -312,8 +310,7 @@
                                                 </div>
                                                 <div class="col-lg-6 col-md-6">
                                                     <div class="content">
-                                                        <h4 class="heading">Create your NFT portfolio</h4>
-                                                        <p>Get udpated with news, tips & tricks</p>
+                                                        <h5 class="heading">Our AI algorithms learn from customer purchase history and give valuable insights.</h5>
                                                     </div>
                                                 </div>
                                             </div>
@@ -339,8 +336,7 @@
                                             <div class="row">
                                                 <div class="col-lg-6 col-md-6">
                                                     <div class="content">
-                                                        <h4 class="heading">Create your NFT portfolio</h4>
-                                                        <p>Get udpated with news, tips & tricks</p>
+                                                        <h5 class="heading">Personalize shopping experience, offer targeted promotions, and increase customer loyalty.</h5>
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-6 col-md-6">
