--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                                     <li class="menu-item">
                                         <a href="#consumers">Consumers</a>
                                     </li>
-                                    <li class="menu-item">
+                                   <!-- <li class="menu-item">
                                         <a href="#faq">FAQ</a>
-                                    </li>
+                                    </li>-->
                                     <li class="menu-item">
                                         <a href="#contact">Contact</a>
                                     </li>
@@ -74,7 +74,7 @@
                         </div>
 
                         <div class="header__action">
-                            <a href="#" class="search-btn">
+                            <!--<a href="#" class="search-btn">
                                 <svg width="21" height="21" viewBox="0 0 21 21" fill="none"
                                      xmlns="http://www.w3.org/2000/svg">
                                     <circle cx="9.7659" cy="9.76639" r="8.98856" stroke="white" stroke-width="1.5"
@@ -82,7 +82,7 @@
                                     <path d="M16.0176 16.4849L19.5416 19.9997" stroke="white" stroke-width="1.5"
                                           stroke-linecap="round" stroke-linejoin="round"/>
                                 </svg>
-                            </a>
+                            </a>-->
                             <a href="#" class="action-btn"><span>Join Now</span></a>
                         </div>
                     </div>
@@ -152,7 +152,7 @@
     <!-- End Banner -->
 
     <!-- About -->
-    <section class="about" id="aboutus">
+    <!--<section class="about" id="aboutus">
         <div class="shape"></div>
         <div class="container" id="about">
             <div class="row rev">
@@ -175,7 +175,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
     <!-- End About -->
 
     <section class="speciality s1" id="whyfadebill">
@@ -460,7 +460,7 @@
             </div>
         </div>
     </section>
-    <section class="testimonials s3">
+   <!-- <section class="testimonials s3">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -581,13 +581,13 @@
 
                     </div>
                     <div class="faq__main flat-tabs">
-                        <!-- <ul class="menu-tab">
+                        &lt;!&ndash; <ul class="menu-tab">
                              <li><h6 class="fs-14">Cryptocurrency</h6></li>
                              <li class="active"> <h6 class="fs-14">NFT Token</h6></li>
                              <li><h6 class="fs-14">Collection</h6></li>
                              <li ><h6 class="fs-14">Crypto Trading</h6></li>
 
-                         </ul>-->
+                         </ul>&ndash;&gt;
                         <div class="content-tab">
                             <div class="content-inner">
                                 <div class="flat-accordion">
@@ -836,7 +836,7 @@
 
             </div>
         </div>
-    </section>
+    </section>-->
     <section class="touch" id="contact">
         <div class="container">
             <div class="row">
@@ -961,7 +961,7 @@
                                 <li><a href="#">Why FadeBill</a></li>
                                 <li><a href="#">Merchants</a></li>
                                 <li><a href="#">Consumers</a></li>
-                                <li><a href="#">FAQ</a></li>
+                                <!--<li><a href="#">FAQ</a></li>-->
                                 <li><a href="#">Contact</a></li>
                             </ul>
                             <p>Copyright © 2023, <span style="color: #53e290"> Rave Tech </span></p>
